# Infectado

./: CMakeLists.txt
assets/config/: figuras.txt
src/: CMakeLists.txt
src/Juego/: CMakeLists.txt  Infeccion.cpp  Infeccion.hpp  Juego.cpp  Juego.hpp
src/Juego/Componentes/: JComponentes.cpp  JComponentes.hpp
src/Juego/Figuras/: Figuras.cpp  Figuras.hpp
src/Juego/Simulation/: Person.hpp  Simulation.cpp  Simulation.hpp
src/Juego/Sistemas/: Sistemas.cpp  Sistemas.hpp
src/Main/: CMakeLists.txt  main.cpp
src/Motor/: CMakeLists.txt  Motor.cpp  Motor.hpp
src/Motor/App/: ALayer.hpp  CMakeLists.txt
src/Motor/Componentes/: IComponentes.cpp  IComponentes.hpp
src/Motor/GUI/: GDock.cpp  GDock.hpp  GLayer.hpp  GLogger.cpp  GLogger.hpp  GViewport.cpp  GViewport.hpp
src/Motor/Primitivos/: Objetos.cpp  Objetos.hpp
src/Motor/Render/: CMakeLists.txt  Render.cpp  Render.hpp
src/Motor/Utils/: CEInterfaces.hpp  CMakeLists.txt  Lista.hpp  Nodo.hpp  Utils.hpp  Vector2D.cpp  Vector2D.hpp
